요청 사항 반영
